// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Grid /> renders correctly 1`] = `
.css-13n4620,
[data-css-13n4620] {
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-flow: row wrap;
  margin: 0 -webkit-calc(-0.5 * 0);
  margin: 0 -moz-calc(-0.5 * 0);
  margin: 0 calc(-0.5 * 0);
}

<div
  className="css-13n4620"
/>
`;

exports[`<Grid /> renders correctly with gutter 1`] = `
.css-1nd4jt7,
[data-css-1nd4jt7] {
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-flow: row wrap;
  margin: 0 -webkit-calc(-0.5 * 10px);
  margin: 0 -moz-calc(-0.5 * 10px);
  margin: 0 calc(-0.5 * 10px);
}

<div
  className="css-1nd4jt7"
/>
`;
